# qwe1

./: .clang-format  .gitignore  CMakeLists.txt  main.cpp
header/: anim.hpp  ground.hpp  keyboard.hpp  main.hpp  object.hpp  rect.hpp  rex.hpp  sprite_factory.hpp  vec.hpp
interface/: drawable.hpp  dynamic.hpp  layout.hpp  object.hpp  transform.hpp
src/: anim.cpp  ground.cpp  keyboard.cpp  main.cpp  object.cpp  rex.cpp  sprite_factory.cpp
